--- a/index.html
+++ b/index.html
@@ -76,6 +76,18 @@
         for you and proceed with
         the payment. </p>
     </div>
+    <div class="category_item">
+      <div class="ellipse"></div>
+      <h3>HEALTH CHECK</h3>
+    </div>
+    <div class="category_item">
+      <div class="ellipse"></div>
+      <h3>SHORT INSTRUCTIONS</h3>
+    </div>
+    <div class="category_item">
+      <div class="ellipse"></div>
+      <h3>FLIGHT TO THE STARS</h3>
+    </div>
   </div>
 </div>
 </section>
