--- a/index.html
+++ b/index.html
@@ -89,7 +89,15 @@
       <h3>FLIGHT TO THE STARS</h3>
     </div>
   </div>
+  <button class="info_button">BOOK NOW>></button>
+  <img class="cosmonaut" src="images/img_astronaut.png" alt="cosmonaut">
 </div>
+
+  <div class="trip_videoblog">
+    <div class="wrapper">
+      <h2>JOIN THE VIRTUAL TRIP TO OUR STATION</h2>
+    </div>
+  </div>
 </section>
 </body>
 </html>
