--- a/index.html
+++ b/index.html
@@ -91,13 +91,12 @@
   </div>
   <button class="info_button">BOOK NOW>></button>
   <img class="cosmonaut" src="images/img_astronaut.png" alt="cosmonaut">
+<div class="break"></div>
+  <div class="trip_videoblog">
+    <h2>JOIN THE VIRTUAL TRIP TO OUR STATION</h2>
+  </div>
 </div>
 
-  <div class="trip_videoblog">
-    <div class="wrapper">
-      <h2>JOIN THE VIRTUAL TRIP TO OUR STATION</h2>
-    </div>
-  </div>
 </section>
 </body>
 </html>
