--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="title">
     <h1>SPACE ODYSSEY</h1>
     <p>your best ever trip</p>
-    <a href="#">
+    <a href="#" class="scroll">
       <span>learn more</span>
       <img src="images/arrow-down.svg" alt="arrow">
     </a>
@@ -94,9 +94,13 @@
 <div class="break"></div>
   <div class="trip_videoblog">
     <h2>JOIN THE VIRTUAL TRIP TO OUR STATION</h2>
-  </div>
+    <div class="video">
+      <iframe id="player" width="960" height="600"
+              src="http://www.youtube.com/embed/NtrVwX1ncqk?enablejsapi=1&origin=http://example.com"
+              frameborder="0"></iframe>
+    </div>
 </div>
-
+</div>
 </section>
 </body>
 </html>
