--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a href="#about" class="scrollto"><h3>about</h3></a>
     <a href="#process" class="scrollto"><h3>process</h3></a>
     <a href="#our_station" class="scrollto"><h3>our station</h3></a>
-    <a href="#" class="scrollto"><h3>book a trip</h3></a>
+    <a href="#book_trip" class="scrollto"><h3>book a trip</h3></a>
   </div>
   <div class="title">
     <h1>SPACE ODYSSEY</h1>
@@ -103,6 +103,21 @@
     </div>
 </div>
 </div>
+
+    <div class="wrapper form_area">
+      <img class="galaxy" src="images/img_space.png" alt="space">
+      <h2 id="book_trip">MAKE YOUR FIRST STEP TO THE STARS</h2>
+      <p>Please fill this short form and our managers contact you immediatly.</p>
+      <form>
+        <input type="text" name="name" placeholder="Name">
+        <input type="tel" name="phone" placeholder="Phone">
+        <input type="email" name="email" placeholder="Email">
+        <input type="text" name="message" placeholder="Your message">
+        <button class="form_button">BOOK NOW>></button>
+      </form>
+
+    </div>
+
 </section>
 </body>
 </html>
