--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <header>
 <div class="wrapper">
-    <img src="images/LOGO.svg" alt="logo">
+    <img src="images/LOGO.svg" alt="logo" id="home">
   <div class="nav_bar">
     <a href="#about" class="scrollto"><h3>about</h3></a>
     <a href="#process" class="scrollto"><h3>process</h3></a>
@@ -115,9 +115,27 @@
         <input type="text" name="message" placeholder="Your message">
         <button class="form_button">BOOK NOW>></button>
       </form>
-
     </div>
-
+  <div class="footer">
+<div class="fist_row row">
+  <p>Address</p>
+  <p>Telephone</p>
+  <p>Email</p>
+  <p>Follow us in social networks</p>
+</div>
+<div class="second_row row">
+  <p>Hensington str, 18</p>
+  <p>0994940-884</p>
+  <p>space@gmail.com</p>
+  <div class="icons_social">
+    <a><img src="images/instagram.svg" alt="icon"></a>
+    <a><img src="images/facebook.svg" alt="icon"></a>
+    <a><img src="images/twitter.svg" alt="icon"></a>
+  </div>
+</div>
+    <span>© Copyright 2011 - 2019 RB Space Odyssey USA LLC. All Rights Reserved.</span>
+    <a href="#home" class="scrollto top"><img src="images/arrow-down.svg" alt="To top"></a>
+  </div>
 </section>
 </body>
 </html>
