--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:500|Roboto:400,500,700" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="images/Shuttle.ico">
   <title>Space Project</title>
   <script src="js/script.js"></script>
 </head>
@@ -97,9 +98,7 @@
   <div class="trip_videoblog">
     <h2 id="our_station">JOIN THE VIRTUAL TRIP TO OUR STATION</h2>
     <div class="video">
-      <iframe id="player" width="960" height="600"
-              src="http://www.youtube.com/embed/NtrVwX1ncqk?enablejsapi=1&origin=http://example.com"
-              frameborder="0"></iframe>
+      <iframe width="960" height="600" src="https://www.youtube.com/embed/NtrVwX1ncqk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </div>
 </div>
