adds + hover + form.css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:500|Roboto:400,500,700" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/form.css">
   <link rel="icon" href="images/Shuttle.ico">
   <title>Space Project</title>
   <script src="js/script.js"></script>
@@ -108,10 +109,47 @@
       <h2 id="book_trip">MAKE YOUR FIRST STEP TO THE STARS</h2>
       <p>Please fill this short form and our managers contact you immediatly.</p>
       <form>
-        <input type="text" name="name" placeholder="Name">
-        <input type="tel" name="phone" placeholder="Phone">
-        <input type="email" name="email" placeholder="Email">
-        <input type="text" name="message" placeholder="Your message">
+
+
+        <span class="input liner">
+					<input class="field field_liner" type="text" id="input-1" />
+					<label class="input_label input_liner" for="input-1">
+						<span class="input_content">Name</span>
+					</label>
+					<svg class="graphic graphic_liner" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
+						<path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"/>
+					</svg>
+				</span>
+
+        <span class="input liner">
+					<input class="field field_liner" type="text" id="input-2" />
+					<label class="input_label input_liner" for="input-2">
+						<span class="input_content">Phone</span>
+					</label>
+					<svg class="graphic graphic_liner" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
+						<path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"/>
+					</svg>
+				</span>
+
+        <span class="input liner">
+					<input class="field field_liner" type="text" id="input-3" />
+					<label class="input_label input_liner" for="input-3">
+						<span class="input_content">Email</span>
+					</label>
+					<svg class="graphic graphic_liner" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
+						<path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"/>
+					</svg>
+				</span>
+
+        <span class="input liner">
+					<input class="field field_liner" type="text" id="input-4" />
+					<label class="input_label input_liner" for="input-4">
+						<span class="input_content">Your message</span>
+					</label>
+					<svg class="graphic graphic_liner" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
+						<path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"/>
+					</svg>
+				</span>
         <button class="form_button">BOOK NOW>></button>
       </form>
     </div>
