adds + hover + form.css

--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
 </head>
 <body>
 <header>
-<div class="wrapper">
+  <div class="wrapper">
     <img src="images/LOGO.svg" alt="logo" id="home">
-  <div class="nav_bar">
-    <a href="#about" class="scrollto"><h3>about</h3></a>
-    <a href="#process" class="scrollto"><h3>process</h3></a>
-    <a href="#our_station" class="scrollto"><h3>our station</h3></a>
-    <a href="#book_trip" class="scrollto"><h3>book a trip</h3></a>
+    <div class="nav_bar">
+      <a href="#about" class="scrollto"><h3>about</h3></a>
+      <a href="#process" class="scrollto"><h3>process</h3></a>
+      <a href="#our_station" class="scrollto"><h3>our station</h3></a>
+      <a href="#book_trip" class="scrollto"><h3>book a trip</h3></a>
+    </div>
+    <div class="title">
+      <h1>SPACE ODYSSEY</h1>
+      <p>your best ever trip</p>
+      <a href="#process" class="scroll scrollto">
+        <span>learn more</span>
+        <img src="images/arrow-down.svg" alt="arrow">
+      </a>
+    </div>
   </div>
-  <div class="title">
-    <h1>SPACE ODYSSEY</h1>
-    <p>your best ever trip</p>
-    <a href="#process" class="scroll scrollto">
-      <span>learn more</span>
-      <img src="images/arrow-down.svg" alt="arrow">
-    </a>
-  </div>
-</div>
 </header>
 <section class="info_block" id="about">
   <div class="wrapper">
-<h2>WE PROPOSE YOU</h2>
+    <h2>WE PROPOSE YOU</h2>
     <div class="flex_icons">
       <div class="hours flex_item">
         <img src="images/icon_clock.svg" alt="clock">
@@ -66,110 +66,109 @@
       <button>BOOK NOW>></button>
     </div>
   </div>
-<div class="wrapper">
-  <h2 id="process">HOW DOES IT WORK?</h2>
-
-  <div class="flex_planet">
-    <div class="line"></div>
-    <div class="category_item">
-      <div class="ellipse"></div>
-      <h3>REGISTRATION</h3>
-      <p>You need to fill the short form
-        below. Our manager helps you
-        to choose a suitable program
-        for you and proceed with
-        the payment. </p>
+  <div class="wrapper">
+    <h2 id="process">HOW DOES IT WORK?</h2>
+    <div class="flex_planet">
+      <div class="line"></div>
+      <div class="category_item">
+        <div class="ellipse"></div>
+        <h3>REGISTRATION</h3>
+        <p>You need to fill the short form
+          below. Our manager helps you
+          to choose a suitable program
+          for you and proceed with
+          the payment. </p>
+      </div>
+      <div class="category_item">
+        <div class="ellipse"></div>
+        <h3>HEALTH CHECK</h3>
+      </div>
+      <div class="category_item">
+        <div class="ellipse"></div>
+        <h3>SHORT INSTRUCTIONS</h3>
+      </div>
+      <div class="category_item">
+        <div class="ellipse"></div>
+        <h3>FLIGHT TO THE STARS</h3>
+      </div>
     </div>
-    <div class="category_item">
-      <div class="ellipse"></div>
-      <h3>HEALTH CHECK</h3>
-    </div>
-    <div class="category_item">
-      <div class="ellipse"></div>
-      <h3>SHORT INSTRUCTIONS</h3>
-    </div>
-    <div class="category_item">
-      <div class="ellipse"></div>
-      <h3>FLIGHT TO THE STARS</h3>
+    <button class="info_button">BOOK NOW>></button>
+    <img class="cosmonaut" src="images/img_astronaut.png" alt="cosmonaut">
+    <div class="break"></div>
+    <div class="trip_videoblog">
+      <h2 id="our_station">JOIN THE VIRTUAL TRIP TO OUR STATION</h2>
+      <div class="video">
+        <iframe width="960" height="600" src="https://www.youtube.com/embed/NtrVwX1ncqk" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+      </div>
     </div>
   </div>
-  <button class="info_button">BOOK NOW>></button>
-  <img class="cosmonaut" src="images/img_astronaut.png" alt="cosmonaut">
-<div class="break"></div>
-  <div class="trip_videoblog">
-    <h2 id="our_station">JOIN THE VIRTUAL TRIP TO OUR STATION</h2>
-    <div class="video">
-      <iframe width="960" height="600" src="https://www.youtube.com/embed/NtrVwX1ncqk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-</div>
-</div>
-
-    <div class="wrapper form_area">
-      <img class="galaxy" src="images/img_space.png" alt="space">
-      <h2 id="book_trip">MAKE YOUR FIRST STEP TO THE STARS</h2>
-      <p>Please fill this short form and our managers contact you immediatly.</p>
-      <form>
-
-
+  <div class="wrapper form_area">
+    <img class="galaxy" src="images/img_space.png" alt="space">
+    <h2 id="book_trip">MAKE YOUR FIRST STEP TO THE STARS</h2>
+    <p>Please fill this short form and our managers contact you immediatly.</p>
+    <form>
         <span class="input liner">
-					<input class="field field_liner" type="text" id="input-1" />
+					<input class="field field_liner" type="text" id="input-1"/>
 					<label class="input_label input_liner" for="input-1">
 						<span class="input_content">Name</span>
 					</label>
-					<svg class="graphic graphic_liner" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
+					<svg class="graphic graphic_liner" width="300%" height="100%" viewBox="0 0 1200 60"
+               preserveAspectRatio="none">
 						<path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"/>
 					</svg>
 				</span>
-
-        <span class="input liner">
-					<input class="field field_liner" type="text" id="input-2" />
+      <span class="input liner">
+					<input class="field field_liner" type="text" id="input-2"/>
 					<label class="input_label input_liner" for="input-2">
 						<span class="input_content">Phone</span>
 					</label>
-					<svg class="graphic graphic_liner" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
+					<svg class="graphic graphic_liner" width="300%" height="100%" viewBox="0 0 1200 60"
+               preserveAspectRatio="none">
 						<path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"/>
 					</svg>
 				</span>
-
-        <span class="input liner">
-					<input class="field field_liner" type="text" id="input-3" />
+      <span class="input liner">
+					<input class="field field_liner" type="text" id="input-3"/>
 					<label class="input_label input_liner" for="input-3">
 						<span class="input_content">Email</span>
 					</label>
-					<svg class="graphic graphic_liner" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
+					<svg class="graphic graphic_liner" width="300%" height="100%" viewBox="0 0 1200 60"
+               preserveAspectRatio="none">
 						<path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"/>
 					</svg>
 				</span>
-
-        <span class="input liner">
-					<input class="field field_liner" type="text" id="input-4" />
+      <span class="input liner last">
+					<input class="field field_liner" type="text" id="input-4"/>
 					<label class="input_label input_liner" for="input-4">
 						<span class="input_content">Your message</span>
 					</label>
-					<svg class="graphic graphic_liner" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
+					<svg class="graphic graphic_liner" width="300%" height="100%" viewBox="0 0 1200 60"
+               preserveAspectRatio="none">
 						<path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"/>
 					</svg>
 				</span>
-        <button class="form_button">BOOK NOW>></button>
-      </form>
-    </div>
-  <div class="footer">
-<div class="fist_row row">
-  <p>Address</p>
-  <p>Telephone</p>
-  <p>Email</p>
-  <p>Follow us in social networks</p>
-</div>
-<div class="second_row row">
-  <p>Hensington str, 18</p>
-  <p>0994940-884</p>
-  <p>space@gmail.com</p>
-  <div class="icons_social">
-    <a><img src="images/instagram.svg" alt="icon"></a>
-    <a><img src="images/facebook.svg" alt="icon"></a>
-    <a><img src="images/twitter.svg" alt="icon"></a>
+      <button class="form_button">BOOK NOW>></button>
+    </form>
   </div>
-</div>
+  <div class="footer">
+    <div class="fist_row row">
+      <p>Address</p>
+      <p>Telephone</p>
+      <p>Email</p>
+      <p>Follow us in social networks</p>
+    </div>
+    <div class="second_row row">
+      <p>Hensington str, 18</p>
+      <p>0994940-884</p>
+      <p>space@gmail.com</p>
+      <div class="icons_social">
+        <a><img src="images/instagram.svg" alt="icon"></a>
+        <a><img src="images/facebook.svg" alt="icon"></a>
+        <a><img src="images/twitter.svg" alt="icon"></a>
+      </div>
+    </div>
     <span>© Copyright 2011 - 2019 RB Space Odyssey USA LLC. All Rights Reserved.</span>
     <a href="#home" class="scrollto top"><img src="images/arrow-down.svg" alt="To top"></a>
   </div>
